# django-secured

./: .gitignore  LICENSE  README.md  setup.cfg
