[metadata]
name = django-secured
version = 0.0.1
author = Ashkan Khademian
author_email = ashkan.khd.q@gmail.com
description = A Django security package for enhancing application security
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ashkan-khd/django-secured
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Topic :: Security

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2

[options.extras_require]
dev =
    black
    isort
    flake8
    pytest
    pytest-django
